--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,4 @@
-EXTRA_DIST=README
+EXTRA_DIST=README bootstrap.sh
 SUBDIRS=src
-
-MAINTAINERCLEANFILES=README
-noinst_DATA=README
+dist_doc_DATA=README
 
