--- a/configure.ac
+++ b/configure.ac
@@ -3,10 +3,10 @@
 
 AC_PREREQ([2.68])
 AC_INIT([rfile], [0.1], [andy@hexten.net])
-AC_CONFIG_FILES([Makefile])
+AM_INIT_AUTOMAKE([-Wall])
+AC_CONFIG_FILES([Makefile src/Makefile])
 AC_CONFIG_SRCDIR([src/rfile.c])
 AC_CONFIG_HEADERS([config.h])
-AM_INIT_AUTOMAKE
 
 # Checks for programs.
 AC_PROG_CC
