--- a/Makefile.am
+++ b/Makefile.am
@@ -2,5 +2,9 @@ EXTRA_DIST=README bootstrap.sh
 SUBDIRS=src tests
 dist_doc_DATA=README
 
-check:
-	$(PROVE) -e '' ./src/rfile
+.PHONY: test check
+
+test: check
+
+check: all
+	$(PROVE) -e '' ./tests/basic
