--- a/configure.ac
+++ b/configure.ac
@@ -4,6 +4,7 @@ AM_INIT_AUTOMAKE
 AC_CONFIG_FILES([Makefile src/Makefile tests/Makefile])
 AC_CONFIG_SRCDIR([src/rfile.c])
 AC_CONFIG_HEADERS([config.h])
+AC_CONFIG_MACRO_DIR([m4])
 
 AC_ARG_VAR([PROVE], [Test::Harness runner])
 
@@ -11,6 +12,7 @@ CFLAGS="-Wall -Werror"
 
 # Checks for programs.
 AC_PROG_CC
+AC_PROG_LIBTOOL
 AC_PATH_PROG([PROVE], [prove])
 
 # Checks for libraries.
