--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,27 @@
+*.la
+*.lo
 *.o
+*~
 .*.swp
 .deps
+.libs
 Makefile
 Makefile.in
 Session.vim
 aclocal.m4
 autom4te.cache/
+config.guess
 config.h
 config.h.in
 config.log
 config.status
+config.sub
 configure
 depcomp
 install-sh
+libtool
+ltmain.sh
 missing
 src/rfile
-tests/basic
 stamp-h1
+tests/basic
