--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,3 +3,6 @@ librfile_la_SOURCES=rfile.c
 librfile_la_LDFLAGS=-version-info 1:0:0
 include_HEADERS=rfile.h
 
+bin_PROGRAMS=rfcat
+rfcat_SOURCES=rfcat.c
+rfcat_LDADD=librfile.la
