Create, install rfile.pc

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,6 +3,9 @@ SUBDIRS=src tests
 dist_doc_DATA=README
 ACLOCAL_AMFLAGS=-I m4
 
+pkgconfigdir = $(libdir)/pkgconfig
+pkgconfig_DATA = rfile.pc
+
 .PHONY: test check
 
 test: check
