Generate test names automatically, non-portably. Shoot me.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,6 +1,7 @@
+AUTOMAKE_OPTIONS=-Wno-portability
 noinst_PROGRAMS=basic
 basic_SOURCES=basic.c tap.c
 basic_LDADD=../src/librfile.la
 
 check: all
-	$(PROVE) -e '' ./basic
+	$(PROVE) -e '' $(addprefix ./, $(noinst_PROGRAMS))
