--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,7 +1,9 @@
 AUTOMAKE_OPTIONS=-Wno-portability
 noinst_PROGRAMS=basic
-basic_SOURCES=basic.c tap.c
-basic_LDADD=../src/librfile.la
+noinst_LIBRARIES=libtest.a
+basic_SOURCES=basic.c
+basic_LDADD=libtest.a ../src/librfile.la
+libtest_a_SOURCES=tap.c
 
 check: all
 	$(PROVE) -e '' $(addprefix ./, $(noinst_PROGRAMS))
