--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -4,6 +4,7 @@ noinst_LIBRARIES=libtest.a
 basic_SOURCES=basic.c
 basic_LDADD=libtest.a ../src/librfile.la
 libtest_a_SOURCES=tap.c
+AM_CFLAGS+=-I../src
 
 check: all
 	$(PROVE) -e '' $(addprefix ./, $(noinst_PROGRAMS))
