--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,5 +1,5 @@
 lib_LTLIBRARIES=librfile.la
-librfile_la_SOURCES=rfile.c
+librfile_la_SOURCES=rfile.c bits.c
 librfile_la_LDFLAGS=-version-info 1:0:0
 include_HEADERS=rfile.h
 
