--- a/configure.ac
+++ b/configure.ac
@@ -9,7 +9,7 @@ AC_CONFIG_MACRO_DIR([m4])
 
 AC_ARG_VAR([PERL], [PROVE], [Test::Harness runner])
 
-AM_CFLAGS="-Wall -Werror"
+AM_CFLAGS="-Wall -Werror -Wno-unused-function"
 AC_SUBST(AM_CFLAGS)
 
 # Checks for programs.
