--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,10 +1,12 @@
 AUTOMAKE_OPTIONS=-Wno-portability
-noinst_PROGRAMS=basic refs
+noinst_PROGRAMS=basic refs filename
 noinst_LIBRARIES=libtest.a
 basic_SOURCES=basic.c
 basic_LDADD=libtest.a ../src/librfile.la
 refs_SOURCES=refs.c
 refs_LDADD=libtest.a ../src/librfile.la
+filename_SOURCES=filename.c
+filename_LDADD=libtest.a ../src/librfile.la
 libtest_a_SOURCES=tap.c testutil.c
 AM_CFLAGS+=-I../src
 
